2010-07-12  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp (save-problem): use WRITE instead of
	FORMAT to avoid creating intermediate LONG-FLOATs

2010-07-12  Sam Steingold  <sds@gnu.org>

	* m4/ffcall.m4 (CL_FFCALL): use `test' instead of `[]'
	Reported by Arseny Slobodyuk <ampy@ich.dvo.ru>

2010-07-09  Vladimir Tzankov  <vtzankov@gmail.com>

	* stream.d (QueryInformationFile_t) [WIN32]: fix calling convention.
	NT API is uses __stdcall not __cdecl
	(handle_pathname): pass correct buffer size to NtQueryInformationFile

2010-07-09  Aleksej Saushev  <asau@inbox.ru>

	* clisp-link.in: use ${DESTDIR} to support staged module installation

2010-07-09  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCC_PICFLAG, XCC_CREATESHARED): set using libtool,
	like we already do with EXPORT_DYNAMIC_FLAG_SPEC

2010-07-09  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-call-out, pari-cgetg): no need
	for (:LANGUAGE :STDC) since we already use DEFAULT-FOREIGN-LANGUAGE
	(extract0, extract1, pari-mantissa, pari-set-component)
	(pari-make-object): use MEMORY-AS instead of WITH-C-VAR/DEREF+CAST
	for performance (10%) as per Joerg's suggestions

2010-07-08  Sam Steingold  <sds@gnu.org>

	* init.lisp (sys::check-redefinition): signal STYLE-WARNING
	instead of WARNING
	(warn-of-type): add a predefun

2010-07-08  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (main_actions): move all MT specific stuff to mt_main_actions
	(mt_main_actions): implement main thread killing here

2010-07-07  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (upload-sf): use scp instead of rsync

2010-07-07  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.49 (2010-07-07)

2010-07-07  Sam Steingold  <sds@gnu.org>

	Fix MSVC support
	* Makefile.devel (win32msvc/makefile.msvc6, win32msvc/makefile.msvc7):
	pass --without-dynamic-modules to makemake
	($(MAKEMAKE_TMP)): substitute CLISP_DECOLONIZE
	* makemake.in: check for ./libtool before invoking it
